--- a/app/src/main/res/layout/activity_new_issue.xml
+++ b/app/src/main/res/layout/activity_new_issue.xml
@@ -1,49 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/gray_github_light"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/gray_github_light"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="@dimen/fabLayoutSpacing"
-            android:paddingEnd="@dimen/fabLayoutSpacing"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            tools:context="com.alorma.github.ui.activity.NewIssueActivity"
-            android:orientation="vertical">
-
-            <EditText
-                android:hint="@string/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editTitle"
-                android:textSize="@dimen/textSizeLarge"/>
-
-            <EditText
-                android:lines="3"
-                android:layout_marginTop="@dimen/gapLarge"
-                android:hint="@string/leave_a_comment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top"
-                android:id="@+id/editBody"
-                android:textSize="@dimen/textSizeMedium"/>
-        </LinearLayout>
-    </android.support.v7.widget.Toolbar>
+    <include layout="@layout/toolbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,24 +14,86 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.alorma.github.ui.activity.NewIssueActivity"
-        android:layout_below="@id/coloredLayout"
-        android:id="@+id/pushAccessLayout"
         android:background="@color/gray_github_light"
         android:orientation="vertical">
 
         <EditText
+            android:hint="@string/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/labels"
-            android:layout_marginTop="@dimen/gapLarge"
-            android:background="@drawable/edit_text_material_dark"
-            android:id="@+id/editLabels"/>
+            android:id="@+id/editTitle"
+            android:textSize="@dimen/textSizeMedium"
+            android:maxLines="2" />
 
-        <Spinner
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/listPreferredItemHeightLarge"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/pushAccessLayout">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:orientation="horizontal"
+                android:animateLayoutChanges="true">
+
+                <TextView
+                    android:id="@+id/assignee"
+                    android:fontFamily="sans-serif-medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/textSizeSmall"
+                    android:gravity="center_vertical|left"
+                    android:lines="1"
+                    android:singleLine="true" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/milestone"
+                    android:fontFamily="sans-serif-medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/textSizeSmall"
+                    android:gravity="center_vertical|left"
+                    android:lines="1"
+                    android:singleLine="true" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/labels"
+                    android:fontFamily="sans-serif-medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/textSizeSmall"
+                    android:gravity="center_vertical|left"
+                    android:lines="1"
+                    android:singleLine="true" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <EditText
             android:layout_marginTop="@dimen/gapLarge"
-            android:id="@+id/spinnerAssignee"/>
+            android:hint="@string/leave_a_comment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="top"
+            android:id="@+id/editBody"
+            android:textSize="@dimen/textSizeSmall"
+            android:background="@null" />
+
     </LinearLayout>
 </LinearLayout>
