--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,49 +5,49 @@
     <declare-styleable name="CircularImageView">
 
         <!-- Specifies whether or not to draw a circular border around the image. -->
-        <attr name="border" format="boolean"/>
+        <attr name="border" format="boolean" />
         <!-- Specifies the color of the border draw around the image. (if enabled) -->
-        <attr name="border_color" format="color"/>
+        <attr name="border_color" format="color" />
         <!-- Makes the border this pixels wide. (if enabled) -->
-        <attr name="border_width" format="dimension"/>
+        <attr name="border_width" format="dimension" />
         <!-- Specifies whether or not to draw a selector on this view upon touch events. -->
-        <attr name="selector" format="boolean"/>
+        <attr name="selector" format="boolean" />
         <!-- Specifies the color of the selector draw on top of the image upon touch events. (if enabled) -->
-        <attr name="selector_color" format="color"/>
+        <attr name="selector_color" format="color" />
         <!-- Specifies the color of the selector stroke drawn around the image upon touch events. Be sure to provide some opacity. (if enabled) -->
-        <attr name="selector_stroke_color" format="color"/>
+        <attr name="selector_stroke_color" format="color" />
         <!-- Makes the selector stroke drawn around the image upon touch events this pixels wide. (if enabled) -->
-        <attr name="selector_stroke_width" format="dimension"/>
+        <attr name="selector_stroke_width" format="dimension" />
         <!-- Specifies whether or not to draw a shadow around your circular image. -->
-        <attr name="shadow" format="boolean"/>
+        <attr name="shadow" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="CustomCircularImageViewTheme">
-        <attr name="circularImageViewStyle" format="reference"/>
+        <attr name="circularImageViewStyle" format="reference" />
     </declare-styleable>
     <declare-styleable name="FABCenterLayout">
-        <attr name="top_id" format="reference"/>
-        <attr name="scrollable_id" format="reference"/>
-        <attr name="folded_size" format="dimension"/>
-        <attr name="unfolded_size" format="dimension"/>
+        <attr name="top_id" format="reference" />
+        <attr name="scrollable_id" format="reference" />
+        <attr name="folded_size" format="dimension" />
+        <attr name="unfolded_size" format="dimension" />
     </declare-styleable>
 
     <declare-styleable name="FloatingActionButton">
-        <attr name="colorPressed" format="color"/>
-        <attr name="colorNormal" format="color"/>
-        <attr name="float_icon" format="reference"/>
+        <attr name="colorPressed" format="color" />
+        <attr name="colorNormal" format="color" />
+        <attr name="float_icon" format="reference" />
         <attr name="size" format="enum">
-            <enum name="normal" value="0"/>
-            <enum name="mini" value="1"/>
+            <enum name="normal" value="0" />
+            <enum name="mini" value="1" />
         </attr>
     </declare-styleable>
     <declare-styleable name="AddFloatingActionButton">
-        <attr name="plusIconColor" format="color"/>
+        <attr name="plusIconColor" format="color" />
     </declare-styleable>
     <declare-styleable name="FloatingActionsMenu">
-        <attr name="addButtonColorPressed" format="color"/>
-        <attr name="addButtonColorNormal" format="color"/>
-        <attr name="addButtonPlusIconColor" format="color"/>
+        <attr name="addButtonColorPressed" format="color" />
+        <attr name="addButtonColorNormal" format="color" />
+        <attr name="addButtonPlusIconColor" format="color" />
     </declare-styleable>
 
     <declare-styleable name="colors">
@@ -77,5 +77,9 @@
             <enum name="line" value="1" />
             <enum name="end" value="2" />
         </attr>
+    </declare-styleable>
+
+    <declare-styleable name="FabToolbar">
+        <attr name="ft_fabId" format="reference" />
     </declare-styleable>
 </resources>
