New html content

--- a/app/src/main/res/layout/readme_fragment.xml
+++ b/app/src/main/res/layout/readme_fragment.xml
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-
-    <WebView
+    <TextView
+        android:id="@+id/htmlContentView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/webContainer"
-        android:paddingBottom="?attr/actionBarSize"
-        android:clipToPadding="false"/>
+        android:layout_height="match_parent" />
 
-    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/progress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:id="@+id/progress"
         android:padding="0dp"
-        app:spb_sections_count="4"
-        app:spb_speed="2.0"
-        app:spb_stroke_width="2dp"
-        app:spb_stroke_separator_length="4dp"
-        app:spb_reversed="false"
         app:spb_mirror_mode="false"
         app:spb_progressiveStart_activated="true"
         app:spb_progressiveStart_speed="1.5"
-        app:spb_progressiveStop_speed="3.4"/>
+        app:spb_progressiveStop_speed="3.4"
+        app:spb_reversed="false"
+        app:spb_sections_count="4"
+        app:spb_speed="2.0"
+        app:spb_stroke_separator_length="4dp"
+        app:spb_stroke_width="2dp" />
 
 </RelativeLayout>
