Improvements on html

--- a/app/src/main/res/layout/issue_detail_issue_view.xml
+++ b/app/src/main/res/layout/issue_detail_issue_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -14,6 +14,14 @@
         card_view:cardElevation="8dp"
         card_view:cardCornerRadius="3dp"
 
+        android:id="@+id/cardView"
+        android:layout_margin="@dimen/gapMedium">
+    -->
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/cardView"
         android:layout_margin="@dimen/gapMedium">
 
@@ -123,5 +131,6 @@
                 android:layout_margin="@dimen/gapMedium"
                 tools:text="dnwjkedn eobfeibfo woeubfouew k wo wo owupij pw wouh fwohrwp" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    <!--</android.support.v7.widget.CardView>-->
+    </FrameLayout>
 </merge>
