--- a/app/src/main/res/layout/readme_fragment.xml
+++ b/app/src/main/res/layout/readme_fragment.xml
@@ -33,7 +33,8 @@
             <TextView
                 android:id="@+id/htmlContentView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:padding="@dimen/gapMedium"/>
         </LinearLayout>
     </ScrollView>
 
