--- a/app/src/main/res/layout/commit_row.xml
+++ b/app/src/main/res/layout/commit_row.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <com.alorma.github.ui.view.CircularImageView
         android:layout_width="36dp"
