Set branch selector in repo detail main activity

--- a/app/src/main/res/layout/list_fragment_breadcumbs.xml
+++ b/app/src/main/res/layout/list_fragment_breadcumbs.xml
@@ -62,8 +62,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="0dp"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="0dp"
-                android:layout_above="@+id/snackBar">
+                android:layout_marginTop="0dp">
 
                 <ListView
                     android:id="@android:id/list"
@@ -71,66 +70,14 @@
                     android:layout_height="match_parent"
                     android:drawSelectorOnTop="false" />
             </android.support.v4.widget.SwipeRefreshLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:id="@+id/snackBar"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
 
-            <com.getbase.floatingactionbutton.FloatingActionsMenu
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <include
+                layout="@layout/fab"
+                android:layout_width="@dimen/fab"
+                android:layout_height="@dimen/fab"
+                android:layout_margin="@dimen/gapLarge"
                 android:scaleType="centerInside"
-                android:layout_gravity="bottom|right|end"
-                fab:fab_addButtonColorNormal="?colorControlNormal"
-                fab:fab_addButtonColorPressed="?colorControlHighlight"
-                fab:fab_labelsPosition="left"
-                fab:fab_labelStyle="@style/menu_labels_style"
-                android:id="@+id/fab_menu"
-                android:layout_above="@+id/snackBar"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true">
-
-                <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    fab:fab_size="mini"
-                    fab:fab_title="@string/navigate_up"
-                    fab:fab_colorNormal="?colorControlNormal"
-                    fab:fab_colorPressed="?colorControlHighlight"
-                    android:id="@+id/fab_up" />
-
-                <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    fab:fab_size="mini"
-                    fab:fab_title="@string/sync_folder"
-                    fab:fab_colorNormal="?colorControlNormal"
-                    fab:fab_colorPressed="?colorControlHighlight"
-                    android:id="@+id/fab_sync" />
-
-                <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    fab:fab_size="mini"
-                    fab:fab_title="@string/change_branch"
-                    fab:fab_colorNormal="?colorControlNormal"
-                    fab:fab_colorPressed="?colorControlHighlight"
-                    android:id="@+id/fab_branches" />
-
-                <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    fab:fab_size="mini"
-                    fab:fab_title="@string/download"
-                    fab:fab_colorNormal="?colorControlNormal"
-                    fab:fab_colorPressed="?colorControlHighlight"
-                    android:id="@+id/fab_download" />
-
-            </com.getbase.floatingactionbutton.FloatingActionsMenu>
+                android:layout_gravity="bottom|right|end"/>
         </RelativeLayout>
 
     </FrameLayout>
