--- a/app/src/main/res/layout/list_fragment_headers.xml
+++ b/app/src/main/res/layout/list_fragment_headers.xml
@@ -18,8 +18,7 @@
             <android.support.v4.widget.SwipeRefreshLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/swipe"
-                android:layout_above="@+id/snackBar">
+                android:id="@+id/swipe">
 
                 <se.emilsjolander.stickylistheaders.StickyListHeadersListView
                     android:id="@android:id/list"
@@ -27,24 +26,6 @@
                     android:layout_height="match_parent"
                     android:drawSelectorOnTop="false" />
             </android.support.v4.widget.SwipeRefreshLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:id="@+id/snackBar"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-
-            <include
-                layout="@layout/fab"
-                android:layout_width="@dimen/fab"
-                android:layout_height="@dimen/fab"
-                android:layout_gravity="bottom|right|end"
-                android:layout_above="@+id/snackBar"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
         </RelativeLayout>
 
         <fr.castorflex.android.smoothprogressbar.SmoothProgressBar xmlns:app="http://schemas.android.com/apk/res-auto"
