--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,15 @@
     <color name="white">#FFFFFF</color>
     <color name="issue_state_open">#ff54A141</color>
     <color name="issue_state_close">#ffd67a4c</color>
+    <color name="pullrequest_state_open">#ff54A141</color>
+    <color name="pullrequest_state_close">#ffd67a4c</color>
+    <color name="pullrequest_state_merged">#ff9a4cd6</color>
     <color name="issue_state_open_dark">#ff3d7b3d</color>
     <color name="issue_state_close_dark">#ffa2553d</color>
+    <color name="pullrequest_state_open_dark">#ff3d7b3d</color>
+    <color name="pullrequest_state_close_dark">#ffa2553d</color>
+    <color name="pullrequest_state_merged_dark">#ff753da2</color>
+
     <color name="defaultEnchancedColor">#00ff0000</color>
 
     <color name="privateRepo">#a1882b</color>
