--- a/app/src/main/res/layout/pullrequest_detail_issue_view.xml
+++ b/app/src/main/res/layout/pullrequest_detail_issue_view.xml
@@ -5,18 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardElevation="8dp"
-        card_view:cardCornerRadius="3dp"
-
-        android:id="@+id/cardView"
-        android:layout_margin="@dimen/gapMedium">
-    -->
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
@@ -121,6 +109,13 @@
                     android:layout_margin="@dimen/gapMedium"
                     android:layout_marginLeft="@dimen/gapLarge" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    style="@style/new_issue_push_access_row"
+                    android:id="@+id/textCommits"
+                    android:layout_marginLeft="@dimen/gapLarge"/>
+
             </LinearLayout>
 
             <TextView
@@ -131,6 +126,5 @@
                 android:layout_margin="@dimen/gapMedium"
                 tools:text="dnwjkedn eobfeibfo woeubfouew k wo wo owupij pw wouh fwohrwp" />
         </LinearLayout>
-    <!--</android.support.v7.widget.CardView>-->
     </FrameLayout>
 </merge>
