--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -78,5 +78,6 @@
     <dimen name="first_keyline">16dp</dimen>
     <dimen name="second_keyline">56dp</dimen>
     <dimen name="toolbar_h_padding">4dp</dimen>
+    <dimen name="extra_action_bar_size">88dp</dimen>
 
 </resources>
