--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -1,26 +1,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.alorma.github.ui.activity.LoginActivity"
-        android:background="@color/white">
+        android:background="@color/white"
+        tools:context="com.alorma.github.ui.activity.LoginActivity">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
             android:id="@+id/imageView"
-            android:visibility="gone"
-            android:scaleType="centerInside"/>
-
-        <WebView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/webview"/>
+            android:scaleType="centerInside"
+            android:visibility="gone" />
+
+        <com.alorma.github.ui.view.CopyWebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </FrameLayout>
 </LinearLayout>
