Commits status numbers color bar

--- a/app/src/main/res/layout/commit_row.xml
+++ b/app/src/main/res/layout/commit_row.xml
@@ -14,8 +14,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginLeft="0dp">
+        android:layout_margin="8dp">
 
         <TextView
             android:layout_width="match_parent"
