--- a/app/src/main/res/layout/single_commit_file_row.xml
+++ b/app/src/main/res/layout/single_commit_file_row.xml
@@ -2,27 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:divider="@drawable/divider_inside_car"
-    android:foreground="?android:selectableItemBackground"
+    android:background="?android:selectableItemBackground"
     android:orientation="vertical"
-    android:padding="8dp"
-    android:showDividers="end">
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/fileName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/textSizeLarge" />
-
-    <TextView
-        android:id="@+id/fileStatus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/gapMedium"
-        android:layout_marginTop="@dimen/gapMedium"
-        android:gravity="right"
-        android:textColor="@color/primary"
-        android:textSize="@dimen/textSizeMedium" />
 
     <com.alorma.github.ui.view.GitChangeStatusView
         android:id="@+id/commitNumbers"
@@ -31,6 +19,7 @@
         android:layout_marginLeft="@dimen/gapLarge"
         android:layout_marginRight="@dimen/gapLarge"
         android:paddingLeft="@dimen/gapMedium"
-        android:paddingRight="@dimen/gapMedium" />
+        android:paddingRight="@dimen/gapMedium"
+        android:layout_marginBottom="@dimen/gapMedium" />
 
 </LinearLayout>
