--- a/app/src/main/res/layout/github_status.xml
+++ b/app/src/main/res/layout/github_status.xml
@@ -1,39 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/textNumbers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/gapMedium"
+        android:background="@drawable/bg_event_commits"
+        android:padding="@dimen/gapSmall"
         android:paddingLeft="@dimen/gapMedium"
-        android:paddingRight="@dimen/gapMedium">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="left|center_vertical"
-            tools:text="54 additions"
-            android:id="@+id/textAdditions" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="right|center_vertical"
-            tools:text="34 deletions"
-            android:id="@+id/textDeletions" />
-    </LinearLayout>
-
-    <com.alorma.github.ui.view.GitChangeStatusColorsView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:id="@+id/colors" />
+        android:paddingRight="@dimen/gapMedium"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="@dimen/textSizeMicro" />
 
 </merge>
