--- a/app/src/main/res/layout/commit_file_row.xml
+++ b/app/src/main/res/layout/commit_file_row.xml
@@ -2,21 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="@dimen/gapMedium"
     android:paddingTop="0dp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:foreground="?android:selectableItemBackground"
         android:minHeight="120dp"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardElevation="4dp"
         card_view:cardCornerRadius="3dp"
-        android:id="@+id/cardView"
-        android:foreground="?selectableItemBackground">
+        card_view:cardElevation="4dp"
+        card_view:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,32 +30,32 @@
                 android:padding="@dimen/gapMedium">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/textFileName"
                     style="@style/TextAppearance.AppCompat.Headline"
-                    android:textColor="?colorControlNormal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="?colorPrimary"
                     tools:text="MyFile.java" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                <com.alorma.diff.lib.DiffTextView
                     android:id="@+id/textContent"
                     style="@style/TextAppearance.AppCompat.Caption"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/gapMedium"
                     android:textColor="@color/secondary_text"
-                    android:textSize="@dimen/textSizeSmall"
-                    android:layout_marginTop="@dimen/gapMedium" />
+                    android:textSize="@dimen/textSizeSmall" />
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@id/toolbar"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:minHeight="?attr/actionBarSize"
+                android:layout_height="wrap_content"
                 android:background="@color/gray_github_light_selected"
-                app:theme="@style/GistFileRowToolbar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                android:minHeight="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:theme="@style/FileRowToolbar" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
