--- a/app/src/main/res/layout/commit_row.xml
+++ b/app/src/main/res/layout/commit_row.xml
@@ -1,56 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <com.alorma.github.ui.view.CircularImageView
+        android:id="@id/avatarAuthor"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:id="@id/avatarAuthor"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="@dimen/textSizeMedium"
-            android:id="@+id/title"
-            android:layout_marginBottom="8dp"/>
+            android:textSize="@dimen/textSizeMedium" />
 
         <RelativeLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/user"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="0dp"
                 android:layout_alignParentTop="true"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="8dp"
                 android:layout_marginTop="0dp"
                 android:layout_toLeftOf="@+id/sha"
                 android:layout_toStartOf="@+id/sha"
-                android:layout_marginRight="8dp"/>
+                android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
+                android:id="@+id/sha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
-                android:id="@+id/sha"
-                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"/>
+                android:layout_alignParentTop="true"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                tools:text="Small Text" />
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/numFiles"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/textNums"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/authorName"
+            android:layout_alignLeft="@+id/authorName"
+            android:layout_alignRight="@+id/authorName"
+            android:layout_alignStart="@+id/authorName"
+            android:layout_below="@+id/textTitle"
+            android:layout_marginRight="@dimen/gapLarge"
+            android:layout_marginTop="@dimen/gapMedium"
+            android:background="@drawable/bg_event_commits"
+            android:padding="@dimen/gapSmall"
+            android:paddingLeft="@dimen/gapMedium"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="@dimen/textSizeMicro" />
     </LinearLayout>
 </LinearLayout>
